# tConsole

binfk_console/: package-lock.json
binfk_console/public/sample-submission-templates/: qc_template.csv  template.ncounter.csv  template.ngs.csv
binfk_console/src/: middleware.js
binfk_console/src/app/: layout.js
binfk_console/src/app/(app)/: HomePage.js  layout.js  page.js
binfk_console/src/app/(app)/cuesai/: CuesAI.js  page.js
binfk_console/src/app/(app)/items/: Items.js  ItemsComp.module.css  itemsComp.js  page.js
binfk_console/src/app/(guest)/: globals.css  layout.js
binfk_console/src/app/CuesAI/: CuesAI.js
binfk_console/src/app/LabDB/: projectsComp.js
binfk_console/src/app/login/: loginComp.js
binfk_console/src/app/signup/: signupComp.js
binfk_console/src/components/: GNavBar.js  NavBar.js
binfk_console/src/lib/: api.js
tcConsoleBackend/: main.py  pyproject.toml
tcConsoleBackend/REPORTS/: template.ncounter.csv
tcConsoleBackend/ext/: auth.json  chat.json  fileUpload.ipynb  forLiQc.csv  forQc.csv  offeringsdat.json
tcConsoleBackend/routers/: auth.py  initialization.py  items.py  llinter.py  projectforms.py  projectsed.py  projectsinfo.py  projectsrepos.py  wpages.py
tcConsoleBackend/schemas/: schema.py  schema_web.py
tcConsoleBackend/templates/: librqctemplate.html  project_initialization.html  qctemplate.html  reportsmailtemplate.html  sample_subnotification.html  samplesubresend.html  samsubtemplate.html  signupcodetemplate.html
tcConsoleBackend/utils/: .env  dbfunc.py  doc_index.faiss  doc_split_text.pkl  jwt_utils.py  llmcall.py
(+66 files in other folders)
